@@ -7,7 +7,12 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+
+  * FIXED: Bug#125: rename_file/2 if source and destination are the same.
+    Dr. Werner Wolff.
+
   * FIXED: phrase/3.  Detmar Meurers and others.
+
 
 VERSION 5.3.2 (Feb 4, 2003)
 ===========================
